--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,16 +1,31 @@
-<nav class="navbar fixed-top" th:fragment="app-nav">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" th:fragment="app-nav">
   <div class="container-fluid">
     <a class="navbar-brand" th:href="@{/}">ВБМК</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/students}">Студенты</a>
-      </li>
-    </ul>
-    <span class="navbar-text ms-auto" sec:authentication="principal.fullName"></span>
-    <form class="d-flex ms-3" th:action="@{/logout}" method="post">
-      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-      <input class="btn btn-link" type="submit" value="Выйти">
-    </form>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Раскрыть навигацию">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/students}">Студенты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/groups}">Группы</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/users}">Пользователи</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/fields}">Настроить поля</a>
+        </li>
+      </ul>
+      <span class="navbar-text ms-auto me-3" sec:authentication="principal.fullName"></span>
+      <form class="d-flex" th:action="@{/logout}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <input class="btn btn-link" type="submit" value="Выйти">
+      </form>
+    </div>
   </div>
 </nav>
 
