--- a/src/main/resources/templates/fragments/modals.html
+++ b/src/main/resources/templates/fragments/modals.html
@@ -158,3 +158,66 @@
     </div>
   </div>
 </div>
+
+<!-- New field modal form -->
+<div th:fragment="create-field-modal">
+  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-field-modal">
+    + Добавить поле
+  </button>
+  <div class="modal fade" id="create-field-modal" tabindex="-1"
+       aria-labelledby="create-field-modal-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="create-field-modal-label">Добавить студента</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        </div>
+        <form th:action="@{/fields/new}" method="post">
+          <div class="modal-body">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <div class="form-floating mb-3">
+              <input class="form-control" type="text" name="name" id="name"
+                     placeholder="Имя поля" required>
+              <label for="name">Имя поля</label>
+            </div>
+            <div class="form-floating mb-3">
+              <select class="form-select"
+                      name="type" id="type">
+                <option value="TEXT">Текст</option>
+                <option value="NUMBER">Число</option>
+                <option value="BOOLEAN">Да/нет</option>
+                <option value="DATE">Дата</option>
+                <option value="ENUM">Выбор</option>
+              </select>
+              <label for="type">Тип поля</label>
+            </div>
+            <div class="form-floating">
+              <input class="form-control" type="text"
+                     name="validValues" id="validValues" disabled>
+              <label class="select-label" for="validValues">Возможные значения</label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+            <button type="submit" class="btn btn-primary">Добавить</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      let select = document.querySelector("#type")
+      select.addEventListener("change", e => {
+        let validValuesInput = document.querySelector("#validValues")
+        if (e.target.value == "ENUM") {
+          validValuesInput.disabled = false
+        } else {
+          validValuesInput.disabled = true
+          validValuesInput.value = ""
+        }
+      })
+    })
+  </script>
+</div>
