--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" th:fragment="app-nav">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light mb-5" th:fragment="app-nav">
   <div class="container-fluid">
     <a class="navbar-brand" th:href="@{/}">ВБМК</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -10,13 +10,13 @@
         <li class="nav-item">
           <a class="nav-link" th:href="@{/students}">Студенты</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" sec:authorize="hasAnyRole('ADMIN')">
           <a class="nav-link" th:href="@{/groups}">Группы</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" sec:authorize="hasAnyRole('ADMIN')">
           <a class="nav-link" th:href="@{/users}">Пользователи</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" sec:authorize="hasAnyRole('ADMIN')">
           <a class="nav-link" th:href="@{/fields}">Настроить поля</a>
         </li>
       </ul>
