--- a/src/main/resources/templates/fragments/modals.html
+++ b/src/main/resources/templates/fragments/modals.html
@@ -1,6 +1,37 @@
+<!-- Delete confirmation modal -->
+<div th:fragment="confirm-delete-modal(url, named, id)">
+  <button th:if="${!named}" class="btn btn-danger btn-sm ms-3"
+          type="button"
+          aria-label="Удалить"
+          data-bs-toggle="modal"
+          th:data-bs-target="${'#confirm-delete-modal-' + id}">x</button>
+  <button th:if="${named}" class="btn btn-danger ms-3"
+          type="button"
+          aria-label="Удалить"
+          data-bs-toggle="modal"
+          th:data-bs-target="${'#confirm-delete-modal-' + id}">Удалить</button>
+  <div class="modal fade" th:id="${'confirm-delete-modal-' + id}" tabindex="-1"
+       th:aria-labelledby="${'confirm-delete-modal-' + id + 'label'}" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" th:id="${'confirm-delete-modal-' + id + 'label'}">Подтвердить удаление</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        </div>
+          <div class="modal-body">
+            <p>Вы уверены что хотите удалить элемент?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+            <button type="submit" class="btn btn-primary" th:formaction="@{${url} + '/delete'}" formmethod="get">Удалить</button>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- New student modal form -->
 <div th:fragment="create-student-modal">
-  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-student-modal">
     + Добавить студента
   </button>
@@ -47,7 +78,6 @@
 
 <!-- New group modal form -->
 <div th:fragment="create-group-modal">
-  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-group-modal">
     + Добавить группу
   </button>
@@ -94,7 +124,6 @@
 
 <!-- New group category modal -->
 <div th:fragment="create-group-category-modal">
-  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-group-category-modal">
     + Добавить направление
   </button>
@@ -111,8 +140,8 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <div class="form-floating mb-3">
               <input class="form-control" type="text" name="name" id="categoryName"
-                     placeholder="Код группы" required>
-              <label for="categoryName">Код группы</label>
+                     placeholder="Название направления" required>
+              <label for="categoryName">Название направления</label>
             </div>
           </div>
           <div class="modal-footer">
@@ -127,16 +156,15 @@
 
 <!-- Edit group category modal -->
 <div th:fragment="save-group-category-modal(category)">
-  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-  <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#save-group-category-modal">
-    + Переименовать
+  <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" th:data-bs-target="${'#save-group-category-modal-' + category.id}">
+    Переименовать
   </button>
-  <div class="modal fade" id="save-group-category-modal" tabindex="-1"
-       aria-labelledby="save-group-category-modal-label" aria-hidden="true">
+  <div class="modal fade" th:id="${'save-group-category-modal-' + category.id}" tabindex="-1"
+       th:aria-labelledby="${'save-group-category-modal-' + category.id + '-label'}" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="save-group-category-modal-label">Переименовать направление</h5>
+          <h5 class="modal-title" th:id="${'save-group-category-modal-' + category.id + '-label'}">Переименовать направление</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <form th:action="${'groups/categories/' + category.id}" method="post">
@@ -145,13 +173,13 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <div class="form-floating mb-3">
               <input class="form-control" type="text" name="name" id="categoryName"
-                     placeholder="Код группы" th:value="${category.name}" required>
-              <label for="categoryName">Код группы</label>
+                     placeholder="Название направления" th:value="${category.name}" required>
+              <label for="categoryName">Название направления</label>
             </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-            <button type="submit" class="btn btn-primary">Добавить</button>
+            <button type="submit" class="btn btn-primary">Переименовать</button>
           </div>
         </form>
       </div>
@@ -170,7 +198,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="create-field-modal-label">Добавить студента</h5>
+          <h5 class="modal-title" id="create-field-modal-label">Добавить поле</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <form th:action="@{/fields/new}" method="post">
@@ -220,4 +248,94 @@
       })
     })
   </script>
+</div>
+
+<!-- New user modal form -->
+<div th:fragment="create-user-modal">
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-user-modal">
+    + Добавить пользователя
+  </button>
+  <div class="modal fade" id="create-user-modal" tabindex="-1"
+       aria-labelledby="create-user-modal-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="create-user-modal-label">Добавить пользователя</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        </div>
+        <form th:action="@{/users/new}" method="post">
+          <div class="modal-body">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <div class="form-floating mb-3">
+              <input class="form-control" type="text" name="login" id="login"
+                     placeholder="ФИО" required>
+              <label for="login">Логин</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input class="form-control" type="text" name="name" id="name"
+                     placeholder="ФИО" required>
+              <label for="name">ФИО</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input class="form-control" type="password" name="password" id="password" required>
+              <label for="password">Пароль</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input class="form-control" type="password" name="confirmPassword" id="confirmPassword" required>
+              <label for="confirmPassword">Подтвердите пароль</label>
+            </div>
+
+            <div class="form-floating">
+              <select class="form-select" name="role" id="role" required>
+                <option value="">--Выберите роль--</option>
+                <option value="ROLE_USER">Преподаватель</option>
+                <option value="ROLE_ADMIN">Администратор</option>
+                <option value="ROLE_SOCIAL">Социальный педагог</option>
+              </select>
+              <label class="select-label" for="role">Роль</label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+            <button type="submit" class="btn btn-primary">Добавить</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Transfer students modal form -->
+<div th:fragment="transfer-students-modal">
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#transfer-students-modal" disabled>
+    Перевести студентов
+  </button>
+  <div class="modal fade" id="transfer-students-modal" tabindex="-1"
+       aria-labelledby="transfer-students-modal-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="transfer-students-modal-label">Добавить пользователя</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
+          <div class="form-floating">
+            <select class="form-select" name="groupId" id="group" required>
+              <option value="">--Выберите группу--</option>
+              <optgroup th:each="category : ${categories}" th:label="${category.categoryName}">
+                <option th:each="group : ${category.groups}" th:value="${group.id}" th:text="${group.code}"></option>
+              </optgroup>
+            </select>
+            <label class="select-label" for="group">Группа</label>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+          <button type="submit" class="btn btn-primary" th:formaction="@{'/students/transfer'}" formmethod="post">Подтвердить</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
