--- a/src/main/resources/templates/groups/list.html
+++ b/src/main/resources/templates/groups/list.html
@@ -5,18 +5,21 @@
   <title>Groups</title>
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
   <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </head>
 <body>
 <div th:replace="~{fragments/layout :: app-nav}"></div>
-<div class="container">
+<div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="h3">Группы</h1>
-    <div th:replace="~{fragments/modals :: create-group-modal}"></div>
-    <button class="btn btn-outline-primary mb-3" type="button"
-            data-bs-toggle="offcanvas" data-bs-target="#group-categories-canvas"
-            aria-controls="group-categories-canvas">
-      Направления
-    </button>
+    <div class="d-flex justify-content-between align-items-center gap-4">
+      <div th:replace="~{fragments/modals :: create-group-modal}"></div>
+      <button class="btn btn-outline-primary" type="button"
+              data-bs-toggle="offcanvas" data-bs-target="#group-categories-canvas"
+              aria-controls="group-categories-canvas">
+        Направления
+      </button>
+    </div>
   </div>
   <form method="get" action="#">
 <!--    <div class="d-flex justify-content-between align-items-center mb-4">-->
@@ -50,7 +53,7 @@
 <div class="offcanvas offcanvas-end" tabindex="-1" id="group-categories-canvas"
      aria-labelledby="group-categories-canvas">
   <div class="offcanvas-header">
-    <h5>Фильтровать студентов</h5>
+    <h5>Направления</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
@@ -58,11 +61,11 @@
     <table class="mt-3">
       <tr th:each="category : ${categories}" class="py-2">
         <td th:text="${category.name}"></td>
-        <td>
-          <div  class="d-flex justify-content-between">
+        <td style="width:30%">
+          <div class="d-flex justify-content-between">
             <div th:replace="~{fragments/modals :: save-group-category-modal(${category})}"></div>
             <form th:action="${'/groups/categories/' + category.id + '/delete'}" method="post">
-              <button class="btn btn-danger btn-sm ms-3" aria-label="Удалить">x</button>
+              <button class="btn btn-danger btn-sm ms-1" aria-label="Удалить">x</button>
             </form>
           </div>
         </td>
