--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <style>
         body {
             display: flex;
