--- a/src/main/resources/templates/students/view.html
+++ b/src/main/resources/templates/students/view.html
@@ -5,17 +5,17 @@
     <title th:text="${student.name}"></title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </head>
 <body>
 <div th:replace="~{fragments/layout :: app-nav}"></div>
-<div class="container">
+<div class="container mt-4">
     <div th:replace="~{fragments/layout :: subpage-nav}"></div>
-    <form action="" method="post">
+    <form th:action="@{/students/{id}(id=${student.id})}" method="post">
         <div class="d-flex justify-content-between align-items-center my-4">
             <h1 class="h3" th:text="${student.name}"></h1>
             <input class="btn btn-primary ms-auto" type="submit" value="Сохранить">
-            <input class="btn btn-danger ms-3" type="submit" value="Удалить" formmethod="get"
-                   th:formaction="${student.id + '/delete'}">
+            <div th:replace="~{fragments/modals :: confirm-delete-modal('/students/' + ${student.id}, true, ${student.id})}" sec:authorize="hasAnyRole('ADMIN')"></div>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <input type="hidden" name="id" th:value="${student.id}">
