--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -38,7 +38,8 @@
                             <select class="form-select" name="searchGroupId" id="group" onchange="this.form.submit()">
                                 <option value="">--Выберите группу--</option>
                                 <optgroup th:each="category : ${categories}" th:label="${category.categoryName}">
-                                    <option th:each="group : ${category.groups}" th:value="${group.id}" th:text="${group.code}"></option>
+                                    <option th:each="group : ${category.groups}" th:value="${group.id}"
+                                            th:text="${group.code}" th:selected="${group.id == searchGroupId}"></option>
                                 </optgroup>
                             </select>
                         </th>
